# NutritionApp/handler/userHandler.go
@@ -2,7 +2,6 @@ package handler
 
 import (
 	"net/http"
-	"time"
 
 	"kunikida123456/NutritionApp/usecase"
 
@@ -12,7 +11,6 @@ import (
 type UserHandler interface {
 	Signup(c echo.Context) error
 	Login(c echo.Context) error
-	Logout(c echo.Context) error
 }
 
 type userHandler struct {
@@ -23,7 +21,7 @@ func NewUserHandler(userUsecase usecase.UserUsecase) UserHandler {
 	return &userHandler{userUsecase: userUsecase}
 }
 
-type userSignUprequest struct {
+type userSignupRequest struct {
 	Name     string `json:"name" binding:"required"`
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required,min=8"`
@@ -42,12 +40,12 @@ type userSignupResponse struct {
 // @Router   /users/signup [post]
 // @Param    body body userSignupRequest true "サインイン情報"
 // @Success  200 {object} userSignupResponse
-// @Failure  400 {object} myerror.BadRequestError
-// @Failure  401 {object} myerror.UnauthorizedError
-// @Failure  404 {object} myerror.NotFoundError
-//	@Failure  500 {object} myerror.InternalServerError
+// @Failure  400
+// @Failure  401
+// @Failure  404
+// @Failure 500
 func (uh *userHandler) Signup(c echo.Context) error {
-	req := new(userSignUprequest)
+	req := new(userSignupRequest)
 
 	if err := c.Bind(&req); err != nil {
 		return err
@@ -85,11 +83,10 @@ type userLoginResponse struct {
 // @Router   /users/lgin [post]
 // @Param    body body userLoginRequest true "ログイン情報"
 // @Success  200 {object} userLoginResponse
-// @Failure  400 {object} myerror.BadRequestError
-// @Failure  401 {object} myerror.UnauthorizedError
-// @Failure  404 {object} myerror.NotFoundError
-//
-//	@Failure  500 {object} myerror.InternalServerError
+// @Failure  400
+// @Failure  401
+// @Failure  404
+// @Failure  500
 func (uh *userHandler) Login(c echo.Context) error {
 	req := new(userLoginRequest)
 
@@ -114,27 +111,28 @@ type userLogoutResponse struct {
 	Token string `json:"token`
 }
 
-// Logout godoc
-// @ID postUsersLogout
-// @Description ログアウト
-// @Accept   json
-// @Produce  json
-// @Router   /users/logout [post]
-// @Success  200 {object} userLoginResponse
-// @Failure  400 {object} myerror.BadRequestError
-// @Failure  401 {object} myerror.UnauthorizedError
-//	@Failure  500 {object} myerror.InternalServerError
-func (uh *userHandler) Logout(c echo.Context) error {
-	user := c.Get("user").(*jwt.Token)
-	claims := user.Claims.(*MyJWTClaims)
-	claims["exp"] = time.Now().Unix()
-	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
-	refreshToken, err := token.SignedString([]byte("secret"))
-	if err != nil {
-		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
-	}
-	res := userLogoutResponse{
-		Token: refreshToken,
-	}
-	return c.JSON(http.StatusOK, res)
-}
+// // Logout godoc
+// // @ID postUsersLogout
+// // @Description ログアウト
+// // @Accept   json
+// // @Produce  json
+// // @Router   /users/logout [post]
+// // @Success  200 {object} userLoginResponse
+// // @Failure  400
+// // @Failure  401
+
+// // 	@Failure 500
+// // func (uh *userHandler) Logout(c echo.Context) error {
+// // 	user := c.Get("user").(*jwt.Token)
+// // 	claims := user.Claims.(*util.MyJWTClaims)
+// // 	claims["exp"] = time.Now().Unix()
+// // 	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+// // 	refreshToken, err := token.SignedString([]byte("secret"))
+// // 	if err != nil {
+// // 		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+// // 	}
+// // 	res := userLogoutResponse{
+// // 		Token: refreshToken,
+// // 	}
+// // 	return c.JSON(http.StatusOK, res)
+// // }
